--- a/WebNET/Views/Admin/Index.cshtml
+++ b/WebNET/Views/Admin/Index.cshtml
@@ -27,13 +27,16 @@
 <style>
     .gridTable{
         border: 1px solid black;
+        
+        
     }
     .productimg{
-        width : 100px;
-        height : 100px;
+        width : 150px;
+        height : 150px;
     }
     .gridHead{
         background : crimson;
+        
     }
     .gridRow{
         border : 1px solid black;
@@ -41,8 +44,11 @@
     }
     table, th, td {
         border: 1px solid black;
+        padding: 5px;
+        
     }
+
    th{
-       width: 100px;
+       width: 150px;
    }
 </style>
