--- a/WebNET/Views/Home/UserPass.cshtml
+++ b/WebNET/Views/Home/UserPass.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "UserPass";
-    Layout = "~/Views/Layout/HomeLayout.cshtml";
+    Layout = "~/Views/Layout/InfoLayout.cshtml";
 }
 
 <script>
@@ -24,8 +24,8 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal" style="margin-left:40%;margin-bottom:10%;">
-        <h2>UserPass</h2>
+    <div class="align-middle" style="margin-left:40%;margin-bottom:10%;">
+        <h2>Đổi mật khẩu</h2>
         <br />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("user_id", Model.user_id)
@@ -65,12 +65,12 @@
         <div class="form-group">
 
             <div class="col-md-10">
-                <p>NewPassword</p>
+                <p>Mật khẩu mới</p>
                 <input type="password" id="user_password" name="user_password" onkeyup='check();' required />
 
             </div>
             <div class="col-md-10">
-                <p>PasswordConfirm</p>
+                <p>Xác nhận mật khẩu mới</p>
                 <input type="password" id="passwordConfirm" name="passwordConfirm" onkeyup='check();' required />
                 <h6 style="color: red" id="message"></h6>
             </div>
