--- a/WebNET/Views/Layout/AdminLayout.cshtml
+++ b/WebNET/Views/Layout/AdminLayout.cshtml
@@ -21,8 +21,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <!--webfont-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close').on('click', function (c) {
                 $('.calender-left').fadeOut('slow', function (c) {
                     $('.calender-left').remove();
@@ -31,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close1').on('click', function (c) {
                 $('.calender-right').fadeOut('slow', function (c) {
                     $('.calender-right').remove();
@@ -40,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close2').on('click', function (c) {
                 $('.graph').fadeOut('slow', function (c) {
                     $('.graph').remove();
@@ -49,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close3').on('click', function (c) {
                 $('.site-report').fadeOut('slow', function (c) {
                     $('.site-report').remove();
@@ -58,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close4').on('click', function (c) {
                 $('.total-sale').fadeOut('slow', function (c) {
                     $('.total-sale').remove();
@@ -67,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close5').on('click', function (c) {
                 $('.to-do').fadeOut('slow', function (c) {
                     $('.to-do').remove();
@@ -76,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close7').on('click', function (c) {
                 $('.user-trends').fadeOut('slow', function (c) {
                     $('.user-trends').remove();
@@ -85,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script>
-    $(document).ready(function (c) {
+        $(document).ready(function (c) {
             $('.alert-close6').on('click', function (c) {
                 $('.world-map').fadeOut('slow', function (c) {
                     $('.world-map').remove();
@@ -95,10 +96,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     <script>
         (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-48014931-1', 'codyhouse.co');
@@ -169,29 +170,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="navigation">
                 <h3>Featured</h3>
                 <ul>
-                    <li><a href="#"><i class="chat"></i></a></li>
+                    <li><i class="fa fa-product-hunt" style="margin-right:10px;color:white"></i></li>
                     <li>@Html.ActionLink("Quản lý sản phẩm","Index")</li>
                 </ul>
                 <ul>
-                    <li><a href="#"><i class="art"></i></a></li>
+                    <li><i class="fa fa-user"  style="margin-right:10px;color:white"></i></li>
                     <li>@Html.ActionLink("Quản lý User", "UserView")</li>
                 </ul>
                 <ul>
-                    <li><a href="#"><i class="user"></i></a></li>
-                    <li><a href="#">Users</a></li>
+                    <li><i class="fa fa-book" style="margin-right:10px;color:white"></i></li>
+                    <li>@Html.ActionLink("Quản lý Đơn Hàng", "QuanLyDonHang")</li>
                 </ul>
-                <ul>
+                @*<ul>
                     <li><a href="#"><i class="fat"></i></a></li>
                     <li><a href="#">Favorites</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#"><i class="speed"></i></a></li>
-                    <li><a href="#">Speed</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#"><i class="setting"></i></a></li>
-                    <li><a href="#">Settings</a></li>
-                </ul>
+                </ul>*@
+                
             </div>
             @*<div class="navigation">
                 <h3>Navigation</h3>
@@ -237,45 +231,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <!--<li class="messages"><a href="#"><i class="msgs"></i><span class="red">3</span></a></li>-->
                     <li>
                         <div id="dd1" class="wrapper-dropdown-1">
-                            <i class="msgs"></i><span class="red">3</span>
-                            <ul class="dropdown">
-                                <div class="notification_header">
-                                    <h3>You have 3 new messages</h3>
-                                </div>
-                                <li>
-                                    <a href="#">
-                                        <div class="user_img"><img src="~/Content/Aimages/avatar2.jpg" alt=""></div>
-                                        <div class="notification_desc">
-                                            <p>Lorem ipsum dolor sit amet</p>
-                                            <p><span>1 hour ago</span></p>
-                                        </div>
-                                        <div class="clear"> </div>
-                                    </a>
-                                </li>
-                                <li class="odd">
-                                    <a href="#">
-                                        <div class="user_img"><img src="~/Content/Aimages/avatar.jpg" alt=""></div>
-                                        <div class="notification_desc">
-                                            <p>Lorem ipsum dolor sit amet </p>
-                                            <p><span>1 hour ago</span></p>
-                                        </div>
-                                        <div class="clear"> </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="user_img"><img src="~/Content/Aimages/avatar1.jpg" alt=""></div>
-                                        <div class="notification_desc">
-                                            <p>Lorem ipsum dolor sit amet </p>
-                                            <p><span>1 hour ago</span></p>
-                                        </div>
-                                        <div class="clear"> </div>
-                                    </a>
-                                </li>
-                                <div class="notification_bottom">
-                                    <h3><a href="#">See all messages</a></h3>
-                                </div>
-                            </ul>
+                            <i class="msgs"></i><span ></span>
+                            
                         </div>
                         <!-----start-script---->
                         <script type="text/javascript">
@@ -308,7 +265,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <!--<li class="notifications"><a href="#"><i class="bell"></i><span class="blue">7</span></a></li>-->
                     <li>
                         <div id="dd3" class="wrapper-dropdown-3">
-                            <i class="bell"></i><span class="blue">5</span>
+                            <i class="bell"></i><span ></span>
                             <ul class="dropdown">
                                 <div class="notification_header">
                                     <h3>You have 5 notifications</h3>
