--- a/WebNET/Views/Layout/InfoLayout.cshtml
+++ b/WebNET/Views/Layout/InfoLayout.cshtml
@@ -3,9 +3,9 @@
 
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&amp;display=swap" rel="stylesheet">
@@ -32,29 +32,56 @@
     <link rel="stylesheet" href="~/Content/css/cart-page.css">
     <link rel="stylesheet" href="~/Content/css/checkout.css">
     <!-- <link rel="stylesheet" href="libs/Hover-master/css/hover.css"> -->
-    <script type="text/javascript">
-        //check email, username
-        //$(document).ready(function () {
-        //    $('#email').on('keyup', function () {
-        //        $.ajax({
-        //            url: '/validate_email',
-        //            data: {
-        //                email: $('#email').val()
-        //            },
-        //            success: function (data) {
-        //                if ($('#email').val() != '' && data == true) {
-        //                    $("#email").css("border", "2px solid red");
-        //                    $('#error_exist_email').html('Email đã được sử dụng!');
-        //                    $("#btnSubmit").attr("disabled", true);
-        //                } else {
-        //                    $("#email").css("border", "2px solid green");
-        //                    $('#error_exist_email').html('');
-        //                    $("#btnSubmit").attr("disabled", false);
-        //                }
-        //            },
-        //        });
-        //    });
-    </script>
+    <style>
+        /* Style The Dropdown Button */
+        .dropbtn {
+            color: black;
+            padding: 1px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* The container <div> - needed to position the dropdown content */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        /* Dropdown Content (Hidden by Default) */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 250px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+            /* Links inside the dropdown */
+            .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
+
+                /* Change color of dropdown links on hover */
+                .dropdown-content a:hover {
+                    background-color: #f1f1f1
+                }
+
+        /* Show the dropdown menu on hover */
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        /* Change the background color of the dropdown button when the dropdown content is shown */
+        .dropdown:hover .dropbtn {
+            background-color: #3e8e41;
+        }
+    </style>
+    <script>$("#divVZITab").focus()</script>
 </head>
 <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
     <header>
@@ -71,14 +98,10 @@
                                     <li>Việt Nam</li>
                                     <li>English</li>
                                 </ul>
+
                             </li>
                             <li>
-                                Currency
-                                <ul class="sub-menu">
-                                    <li>VNĐ</li>
-                                    <li>Euro</li>
-                                    <li>Dollar</li>
-                                </ul>
+                                @Html.ActionLink("Quản lý", "Index", "Admin")
                             </li>
                         </ul>
                     </div>
@@ -95,39 +118,44 @@
                                 <i class="fas fa-search" aria-hidden="true"></i>
                                 <div class="sub__input">
                                     @*Tao form submit ve action tim kiem*@
-                                    @using (Html.BeginForm("KQTimKiem", "TimKiem")) {
-                                <input type="text" name="sTukhoa" placeholder="Nhập sản phẩm cần tìm">
-                                    }
+                                    @using (Html.BeginForm("KQTimKiem", "TimKiem"))
+                                    {
+                        <input type="text" name="sTukhoa" placeholder="Nhập sản phẩm cần tìm">}
                                 </div>
 
                             </li>
                             <li class="user">
                                 <i class="fas fa-user" aria-hidden="true"></i>
-                                @{
-                                    if (Session["TaiKhoan"] != null && Session["TaiKhoan"] != "")
+                                @{ if (Session["TaiKhoan"] != null && Session["TaiKhoan"] != "")
                                     {
                                         user tv = (user)Session["TaiKhoan"];
-                                        <span>Chào @tv.user_email</span>
-                                        @Html.ActionLink("Logout", "Logout")
-                                    }
-                                    else
-                                    {
 
-                                        <ul class="sub-menu">
-                                            <li><a href="@Url.Action("DangKy", "Home", new { id = "Register" })">Register</a></li>
-                                            <li><a href="@Url.Action("Login", "Home", new { id = "Login" })">Login</a></li>
-                                        </ul>
-                                    }
 
-                                }
+                        <div class="dropdown">
+                            <button class="dropbtn">Chào @tv.user_email</button>
+                            <div class="dropdown-content">
+
+                                @Html.ActionLink("Thông tin tài khoản", "UserInfo","Home")
+
+                                @Html.ActionLink("Đổi mật khẩu", "UserPass", "Home")
+                                @Html.ActionLink("Thông tin đơn hàng", "ThongTinDonHang", "Home")
+                                @Html.ActionLink("Logout", "Logout", "Home")
+                            </div>
+                        </div> }
+                    else
+                    {
+
+        <ul class="sub-menu">
+            <li><a href="@Url.Action("DangKy", "Home", new { id = "Register" })">Register</a></li>
+            <li><a href="@Url.Action("Login", "Home", new { id = "Login" })">Login</a></li>
+        </ul> } }
 
 
 
                             </li>
-
-                            <li id="clickCart">
-                                <i class="fas fa-shopping-cart" aria-hidden="true"></i><span class="cart__quantity">0</span>
-                            </li>
+                            @*///////////////////////////*@
+                            @*Chen partial view giỏ hàng *@
+                            @Html.Action("GioHangPartial", "GioHang")
                         </ul>
                         <div class="cart__container" id="cartContainer">
                             <div class="cart__wrapper">
@@ -195,26 +223,33 @@
                 <nav class="main-nav__container">
                     <ul class="main-nav__menu">
                         <li>
-                            <a href="category.html">Organic Food</a>
-                            <ul class="sub__main__menu">
-                                <li><a href="category.html">Healthful Food</a></li>
-                                <li><a href="category.html">Super Food</a></li>
-                                <li><a href="category.html">Lite Food</a></li>
-                            </ul>
+
+                            @Html.ActionLink("Organic Food", "Organic", "Home")
+
                         </li>
-                        <li><a href="chemical-free.html">Chemical Free</a></li>
                         <li>
-                            <a href="fruits.html">Fruits</a>
-                            <ul class="sub__main__menu">
-                                <li><a href="fruits.html">Skinny Food</a></li>
-                                <li><a href="fruits.html">Low-calorie</a></li>
-                                <li><a href="fruits.html">Lite Food</a></li>
-                                <li><a href="fruits.html">Non-Fat</a></li>
-                                <li><a href="fruits.html">Peanut</a></li>
-                            </ul>
+
+                            @Html.ActionLink("Chemical Free", "Free", "Home")
                         </li>
-                        <li><a href="nursery.html">Nursery</a></li>
-                        <li><a href="vegetables.html">Vegetables</a></li>
+
+                        @*<li>
+                                <a href="fruits.html">Fruits</a>
+                                <ul class="sub__main__menu">
+                                    <li><a href="fruits.html">Skinny Food</a></li>
+                                    <li><a href="fruits.html">Low-calorie</a></li>
+                                    <li><a href="fruits.html">Lite Food</a></li>
+                                    <li><a href="fruits.html">Non-Fat</a></li>
+                                    <li><a href="fruits.html">Peanut</a></li>
+                                </ul>
+                            </li>*@
+                        <li>
+
+                            @Html.ActionLink("Nursery", "Nursery", "Home")
+                        </li>
+                        <li>
+
+                            @Html.ActionLink("Vegetables", "Vegetables", "Home")
+                        </li>
                         <li>
                             <a href="#">More</a>
                             <ul class="sub__main__menu">
@@ -231,29 +266,7 @@
 
 
     <main>
-        <section class="hero-banner">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="~/Content/img/main-banner-1-1903x633.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/Content/img/main-banner-2-1903x633.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/Content/img/main-banner-3-1903x633.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </section>
+       
 
         @RenderBody()
 
@@ -464,21 +477,16 @@
     </div>
     <!-- Javascript -->
     @*<script src="~/Content/js/main.js"></script>
-    <script src="~/Content/js/productDetail.js"></script>
-    <script src="~/Content/js/home.js"></script>*@
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        <script src="~/Content/js/productDetail.js"></script>
+        <script src="~/Content/js/home.js"></script>*@
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <script>
-                                                                                                    AOS.init();
-    </script>
+    <script>AOS.init();</script>
 
 
 
-    </body>
+</body>
 </html>
